# flake-schemas-rust

./: .gitignore  Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  README.md  flake.nix
.github/workflows/: checks.yml  publish.yml
src/: error.rs  lib.rs  types.rs
src/tests/: mod.rs  parse.rs  serialize.rs  visit.rs
tests/custom-bespoke/: flake.nix
tests/custom-bySystem/: flake.nix
tests/custom-collectionBySystem/: flake.nix
tests/custom-ignored/: flake.nix
tests/custom-modules/: flake.nix
tests/custom-nestedBySystem/: flake.nix
tests/default-devShells/: flake.nix
tests/default-formatter/: flake.nix
tests/default-homeConfigurations/: flake.nix
tests/default-ignored/: flake.nix
tests/default-legacyPackages/: flake.nix
tests/default-nixosConfigurations/: flake.nix
tests/default-nixosModules/: flake.nix
tests/default-overlays/: flake.nix
tests/default-packages/: flake.nix
tests/empty/: flake.nix
tests/legacy-bySystem/: flake.nix
tests/legacy-collectionBySystem/: flake.nix
tests/legacy-nestedBySystem/: flake.nix
