[package]
name = "flake-schemas"
description = "A library for inspecting the contents of a flake"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.4.1"
